# br-ar

./: .gitattributes  .gitignore  AUTHORS  BUILD.md  COPYING  Makefile.am  NEWS  README.md  VERSION  br-ar.1.in  brarchive.5.in  configure.ac
.github/workflows/: android-termux.yml  create-release.yml  debian.yml  linux-glibc.yml  linux-musl.yml  macos.yml  release.yml  release.yml.old  ubuntu.yml  windows.yml
src/: Makefile.am  br_ar.c  brarchive-cli.in
tests/: Makefile.am  recipes.brarchive  test-combined-flags  test-create  test-delete  test-extract  test-list  test-print
